--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+		"deploy": "firebase deploy --token 1/3ukV0dWtc_p80O6VXH2T8JgNG1C4ZxmshGhZr3gyeJY",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
