--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-		"deploy": "firebase deploy --token 1/3ukV0dWtc_p80O6VXH2T8JgNG1C4ZxmshGhZr3gyeJY",
+    "deploy": "firebase deploy --token 1/3ukV0dWtc_p80O6VXH2T8JgNG1C4ZxmshGhZr3gyeJY",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -34,6 +34,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "firebase-tools": "^4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
