--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           command: yarn install
       - save_cache:
           paths:
-            - node_modules
+            - ~/node_modules
           key: dependencies-{{ checksum "package.json" }}
   compile:
     docker:
