--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
       - checkout
       - run:
           name: app-build
-          command: yarn run build
+          command: yarn ng -- build --prod --aot --no-progress
   deploy:
     docker:
       - image: circleci/node:10.9.0
