--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,14 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: dependency-cache-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "node_modules" }}
       - run:
           name: install-dependencies
           command: yarn install
       - save_cache:
           paths:
             - node_modules
-          key: dependency-cache-{{ checksum "package.json" }}
+          key: dependency-cache-{{ checksum "node_modules" }}
   compile:
     docker:
       - image: circleci/node:10.9.0
