--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,6 @@ jobs:
     working_directory: ~/ci-test
     steps:
       - checkout
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          - v1-dependencies-
       - run:
           name: install-dependencies
           command: yarn install
@@ -22,14 +18,18 @@ jobs:
       - image: circleci/node:10.9
     steps:
       - checkout
+      - restore_cache:
+          key: v1-dependencies-{{ checksum "package.json" }}
       - run:
           name: app-build
-          command: yarn add @angular/cli && yarn run build
+          command: yarn run build
   deploy:
     docker:
       - image: circleci/node:10.9
     steps:
       - checkout
+      - restore_cache:
+          key: v1-dependencies-{{ checksum "package.json" }}
       - run:
           name: app-deploy
           command: yarn run deploy
