--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           key: v2-dependencies-{{ checksum "package.json" }}
       - run:
           name: install-dependencies
-          command: yarn add @angular/cli && yarn add firebase-tools
+          command: yarn install
       - save_cache:
           key: v2-dependencies-{{ checksum "package.json" }}
           paths:
@@ -23,8 +23,15 @@ jobs:
       - restore_cache:
           key: v2-dependencies-{{ checksum "package.json" }}
       - run:
+          name: install-dependencies
+          command: yarn install
+      - run:
           name: app-build
           command: yarn run build
+      - save_cache:
+          key: v2-dependencies-{{ checksum "package.json" }}
+          paths:
+            - "node_modules"
   deploy:
     docker:
       - image: circleci/node:10.9
@@ -33,8 +40,15 @@ jobs:
       - restore_cache:
           key: v2-dependencies-{{ checksum "package.json" }}
       - run:
+          name: install-dependencies
+          command: yarn install
+      - run:
           name: app-deploy
           command: yarn run deploy
+      - save_cache:
+          key: v2-dependencies-{{ checksum "package.json" }}
+          paths:
+            - "node_modules"
 workflows:
   version: 2
   compile_and_test:
