--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,9 @@ jobs:
       - run:
           name: app-build
           command: yarn run build
+      - store_artifacts:
+          path: "dist/ci-test"
+          destination: dist-folder
       - save_cache:
           key: v2-dependencies-{{ checksum "package.json" }}
           paths:
