--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,8 @@ jobs:
           name: app-build
           command: yarn add @angular/cli && yarn run build
       - store_artifacts:
-          path: ~/dist/ci-test
-          destination: dist/ci-test
+          path: /temp/ci-test/dist/ci-test
+          destination: ci-test
   deploy:
     docker:
       - image: circleci/node:10.9
