--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build",
     "deploy": "firebase deploy --token 1/3ukV0dWtc_p80O6VXH2T8JgNG1C4ZxmshGhZr3gyeJY",
     "test": "ng test",
     "lint": "ng lint",
