--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           command: yarn run build
       - store_artifacts:
           path: dist/ci-test
-          destination: ci-test
+          destination: ~/dist/ci-test
   deploy:
     docker:
       - image: circleci/node:10.9
