--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           command: yarn run build
       - store_artifacts:
           path: dist/ci-test
-          destination: ./dist/ci-test
+          destination: /dist/ci-test
   deploy:
     docker:
       - image: circleci/node:10.9
@@ -36,7 +36,7 @@ jobs:
       - save_cache: *save_npm_cache
       - run:
           name: app-deploy
-          command: yarn add firebase-tools && yarn run deploy
+          command: yarn run deploy
 workflows:
   version: 2
   compile_and_test:
