--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
           name: compile-app
           command: yarn run build
       - persist_to_workspace:
-          root: workspace
+          root: /dist/ci-test
           paths:
             - dist/ci-test
   deploy:
@@ -38,7 +38,7 @@ jobs:
       - run: *install_npm_deps
       - save_cache: *save_npm_cache
       - attach_workspace:
-          at: ~/ci-test/workspace
+          at: ~/ci-test/dist/ci-test
       - run:
           name: app-deploy
           command: yarn run deploy
