--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ jobs:
       script: yarn run build
     - stage: "Deploy"
       if: branch = master
-      name: "Building & Deploying app..."
+      name: "Getting ready to deploy..."
       before_script: yarn run build
-      script: yarn run deploy
+      script: if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then yarn run deploy; fi
