--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,50 @@
+# language: node_js
+# node_js: stable
+# cache:
+#   directories:
+#     - node_modules
+# git:
+#   depth: 3
+# jobs:
+#   include:
+#     - stage: Install
+#       name: "Installing dependencies..."
+#       script: yarn install
+#     - stage: Build
+#       if: branch != master
+#       name: "Building app..."
+#       script: yarn run build
+#     - stage: "Deploy"
+#       if: branch = master
+#       name: "Getting ready for production..."
+#       before_script: yarn run build
+#       script: if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then yarn run deploy; fi
+
 language: node_js
 node_js: stable
 cache:
+  yarn: true
   directories:
     - node_modules
-git:
-  depth: 3
+
+matrix:
+  fast_finish: true
+
 jobs:
   include:
     - stage: Install
       name: "Installing dependencies..."
       script: yarn install
     - stage: Build
-      if: branch != master
       name: "Building app..."
       script: yarn run build
+      after_sucess:
+        - cp config/dist/ci-test dist/ci-test
     - stage: "Deploy"
+      name: "Shipping app..."
+      script: skip
+      deploy:
+        skip_cleanup: true
+        provider: script
+        script: yarn run deploy
       if: branch = master
-      name: "Getting ready for production..."
-      before_script: yarn run build
-      script: if [ "${TRAVIS_PULL_REQUEST}" = "false" ]; then yarn run deploy; fi
