--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ jobs:
       name: "Building app..."
       script: yarn run build
       after_success:
-        - cp /dist/ci-test dist/ci-test
+        - cp dist/ci-test dist/ci-test
     - stage: "Deploy"
       name: "Shipping app..."
       script: skip
