--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ cache:
   yarn: true
   directories:
     - node_modules
-    - dist/**
+    - dist/ci-test
 
 matrix:
   fast_finish: true
@@ -46,4 +46,4 @@ jobs:
         skip_cleanup: true
         provider: script
         script: yarn run deploy
-      if: branch = master
+      if: branch = master AND type = merge
